# DuelVala

./: README.md  com.github.pedromiguel_dev.DuaelVala.json  meson.build
data/: com.github.pedromiguel_dev.DuaelVala.appdata.xml.in  com.github.pedromiguel_dev.DuaelVala.desktop.in  com.github.pedromiguel_dev.DuaelVala.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  duelvala.gresource.xml  main.vala  meson.build  style.css
src/pages/: headerbar.vala  home.vala  leaflet.vala  retry.vala  window.vala
